# bt-sec-analyzer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
bt_sectester/: __init__.py  __main__.py  cli.py
bt_sectester/core/: __init__.py  api_bridge.py  engine.py
bt_sectester/modules/: __init__.py
bt_sectester/modules/ai/: __init__.py  ollama_client.py
bt_sectester/modules/attacks/: __init__.py  attack_simulator.py
bt_sectester/modules/reporting/: __init__.py  report_generator.py
bt_sectester/modules/scanning/: bluetooth_scanner.py
bt_sectester/tests/: __init__.py  test_config.py  test_helpers.py  test_logger.py
bt_sectester/utils/: __init__.py  config.py  helpers.py  logger.py  privileges.py
configs/: config.yaml
docker/: Dockerfile  Dockerfile.bettercap  build.sh
docs/: API.md  DEVELOPMENT.md  PROJECT_COMPLETE.md  PROJECT_OVERVIEW.md
scripts/: build_executable.sh  install_arch.sh  setup.py
ui/: package-lock.json  package.json  vite.config.js
ui/src/: App.svelte  app.css
